style/styles.css
/* ... */
.curriculum .card {
  background: linear-gradient(
      to bottom,
      rgba(115, 209, 247, 0.5) 0%,
      rgba(115, 209, 247, 0.4) 5%,
      transparent 33%
    ),
    white;
  background-size: cover;
}

.curriculum .card h3 {
  font-weight: 700;
  font-size: 1.5625rem;
  line-height: 2rem;
}

.curriculum .card p {
  font-weight: 500;
  font-size: 1rem;
  line-height: 2rem;
  color: #808080;
  font-family: "Raleway", serif;
}

.curriculum .card h4 {
  font-weight: 700;
  font-size: 1rem;
  line-height: 2rem;
}

.curriculum .slider {
  /* background-color: gray; */
  gap: 0.625rem;
  justify-content: center;
  margin-top: 5rem;
  align-items: center;
}

.curriculum .slider button {
  border-radius: 2rem;
  background-color: orange;
  padding: 1rem 1.25rem 1rem 1.25rem;
  margin-bottom: 3.75rem;
}

/* 
-------------------------------------------------------------------
>>>>>>>>>>>>>>>>>>>>>>>>SECTION>>>>>>>>>STORIES
-------------------------------------------------------------------
*/

.stories {
  margin-top: 2.5rem;
  width: auto;
}

.stories .cards {
  display: grid;
  /* justify-content: center; */
  grid-template-areas:
    "card-1 card-2 card-3"
    "card-1 card-4 card-5";
  width: auto;
  height: auto;
  margin-top: 5rem;
  text-align: left;
  gap: 1rem;
}

.stories .cards img {
  display: block;
  border-top-left-radius: 1rem;
  border-top-right-radius: 1rem;
  object-fit: cover;
}

.stories .cards .card {
  border-radius: 1rem;
}

.stories .card-1 {
  grid-area: card-1;
  /* width: 38rem; */
  width: auto;
  height: auto;
  /* max-width: 38rem; */
  background-color: white;
  padding: 0px;
  position: relative;
}

#date-badge,
#date-badge-2,
#date-badge-3 {
  position: absolute;
  font-size: 1rem;
  font-weight: 400;
  padding: 10px 18px 10px 18px;
  line-height: 28px;
  border-radius: 47px;
  margin-left: 2.26vw;
  margin-top: -2.5vh;
  background: skyblue;
  /* background: var(--violet); */
}

#date-badge-2 {
  margin-left: 2.26vw;
  margin-top: 16vh;
  background: skyblue;
  background-color: var(--green);
}

#date-badge-3 {
  margin-left: 2.26vw;
  margin-top: -3vh;
  background: skyblue;
  background-color: var(--violet);
}

.stories .card-img-container {
  position: relative;
}

.stories .card-1 img {
  width: 100%;
}

.stories .card-1 h2 {
  margin-top: 3rem;
  margin-bottom: 3rem;
  padding-right: 2.4375rem;
  padding-left: 2.4375rem;
  text-align: left;
}

.stories .cards .card-1 h2 {
  font-size: 1.5rem;
  font-weight: 700;
  line-height: 2.375rem;
}

.stories .card-1 p {
  padding-right: 2.4375rem;
  padding-left: 2.4375rem;
}

.stories .card-3 {
  grid-area: card-3;
  background-color: white;
}

.card-2 {
  grid-area: card-2;
  background-color: white;
}

.card-2,
.card-3,
.card-4,
.card-5 {
  /* width: 22rem; */
  width: auto;
  height: auto;
  object-fit: cover;
}

.card-2 img,
.card-3 img,
.card-4 img,
.card-5 img {
  /* width: 22rem; */
  width: 100%;
  height: 11.0625rem;
}

.card-2 h2,
.card-3 h2,
.card-4 h2,
.card-5 h2 {
  font-weight: 43.75rem;
  font-size: 0.9375rem;
  line-height: 1.75rem;
  padding: 2.375rem;
  text-align: left;
}

.stories .card-4 {
  grid-area: card-4;
  background-color: white;
}

.stories .card-5 {
  grid-area: card-5;
  background-color: white;
}

.stories .btn-primary {
  margin-top: 7%;
  justify-content: center;
}

.stories .btn-primary button {
  padding: 0.625rem 3.94rem;
}

/*




-------------------------------------------------------------------
>>>>>>>>>>>>>>>>>>>>>>>>SECTION>>>>>>>>>FOOTER
-------------------------------------------------------------------
*/

footer {
  background: skyblue;
  padding-bottom: 11.25rem;
  padding-top: 7.5rem;
  /* padding-left: 8.75rem;
  padding-right: 8.75rem; */
  margin-top: 5rem;
  /* max-width: 100%; */
  /* width: auto; */
  /* margin-right: 8.75rem;
  margin-left: 8.75rem; */
}

.footer-container {
}

.footer-title-box {
  gap: 0.625rem;
}

.footer-container .footer-title-box h1 {
  font-weight: 700;
  font-size: 2.625rem;
  line-height: 2.5rem;
  color: white;

  /* background-color: black; */
}

.footer-container .footer-title-box .footer-img-container {
  /* height: 100%; */

  /* Or use 'contain' for showing the full image */

  /* height: 5rem;
  width: 5rem; */
}

footer .footer-title-box .footer-img-container img {
  /* height: 100%; */
  /* object-fit: cover; */
  width: 100%;
  height: 100%; /* OR set height to a specific value if needed */
  object-fit: cover;
}

.footer-content p {
  font-weight: 400;
  font-size: 1.25rem;
  color: white;
  margin-top: 2.15rem;

  /* background-color: black; */
}

.footer-content {
  max-width: 30rem;
  margin-right: 15%;
}

.footer-list {
  margin-right: 15%;
  flex-direction: column;
}

.footer-container h3 {
  font-weight: 700;
  font-size: 1.5rem;
  color: white;
}

.footer-container .footer-list ul {
  margin-top: 2rem;
  list-style-type: none;
  flex-direction: column;
  gap: 1.25rem;
}

.footer-container .footer-list ul li {
  color: white;
  font-size: 1.25rem;
  font-weight: 400;
}

.footer-container .footer-socials ul {
  list-style-type: none;
  gap: 0.625rem;
}

.socials {
  gap: 0.625rem;
  margin-top: 2rem;
}
/* ... */

